...
  );

  return (
    <Container className="flex-1">
      <ScreenHeader
        title={user ? user?.first_name + ' ' + user?.last_name : 'Loading...'}
        subtitle="Good Morning,"
        rightElement={BellIcon}>
        <SearchInput placeholder="Search employees..." value={search} onChangeText={setSearch} />
      </ScreenHeader>
      {/* Content Scroll */}
      ...
      <View className="flex-1 px-6 pt-6">
...
          ))}
        </View>

        {/* List Header */}
        <View className="mb-4 flex-row items-end justify-between">
          <Text variant="heading" size="lg" className="text-gray-900 dark:text-white">
            All Employees
          </Text>
          <TouchableOpacity>
            <Text variant="link" className="text-sm font-semibold">
              View All
            </Text>
          </TouchableOpacity>
...
